Bug 95666 - Invalid spam tool in KMail
Summary: Invalid spam tool in KMail
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-22 14:40 UTC by Thomas McGuire
Modified: 2007-09-14 12:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2004-12-22 14:40:42 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

When launching the Anti-Spam-Wizard, the last entry on the second page is invalid, it is displayed only as "(found on this system)".
This is clearly the result of an invalid kmail.antispamrc file. I did not modify it, it came from a vanilla KDE CVS install.

The invalid section is:
>[Spamtool #6]
>HeadersOnly=yes
>ScoreName=Razor
>ScoreHeader=X-Razor-Spam
>ScoreType=Bool
>ScoreValueRegexp=SPAM
>ScoreThresholdRegexp=
Comment 1 Andreas Gungl 2004-12-26 21:01:15 UTC
The file format is okay, because it has been extended in the meantime. However there is a problem with the logic inside of KMail.
Comment 2 Andreas Gungl 2004-12-26 21:10:07 UTC
CVS commit by gungl: 

Somehow reading local configs defaults to the global one
if no local config is available. So we have to double the
check for HeadersOnlyheader.

BUG: 95666


  M +2 -1      antispamwizard.cpp   1.48
  M +2 -2      antispamwizard.h   1.24


--- kdepim/kmail/antispamwizard.cpp  #1.47:1.48
@@ -583,4 +583,5 @@ void AntiSpamWizard::ConfigReader::readA
   {
     KConfigGroup toolConfig( mConfig, groupName.arg( i ) );
+    if( !toolConfig.readBoolEntry( "HeadersOnly", false ) )
     mergeToolConfig( readToolConfig( toolConfig ) );
   }