Somehow reading local configs defaults to the global one if no local config is available. So we have to double the check for HeadersOnlyheader.

BUG: 95666

svn path=/trunk/kdepim/; revision=373432